// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test plugin sitemap custom query runs 1`] = `
Array [
  Object {
    "changefreq": "weekly",
    "priority": 0.8,
    "url": "http://dummy.url/page-1",
  },
]
`;

exports[`Test plugin sitemap default settings work properly 1`] = `
Array [
  Object {
    "changefreq": "daily",
    "priority": 0.7,
    "url": "http://dummy.url/page-1",
  },
  Object {
    "changefreq": "daily",
    "priority": 0.7,
    "url": "http://dummy.url/page-2",
  },
]
`;
